$Id: History,v 1.77 2003-02-18 10:41:12 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

18 feb 03: V.Ivant
- utilise SubType for GenericIons
- fix problems with lambda and range tables for STD hadrons/ions
- fix problem of several runs with changed cuts/couples for STD

13 feb 03: V.Ivant
- add names for all models
- make the set of model per region available
- make SubCutoff regime available per region

10 feb 03: mma (utils-V05-00-03)
- tag to take account the Laszlo + Vladimir modifs

07 feb 03: V.Ivant
- fix problem in fluctuations for STD

06 feb 03: L.Urban 
- important modifications in MSC (both in old design and model
  version)
  - changes in data members
  - algorithm to reduce the step dependence is new
  - new sampling for the geom.pathlengths

05 feb 03: V.Ivant (utils-V05-00-02)
- Fix on warnings at SUN for STD classes
- Add Initialise method to STD classes to calculate PartialSumSigma
- Subsitute Material by MaterialCutsCouple for PostStep STD

24 jan 03: V.Ivant (utils-V05-00-01)
- Migration to "cut per region" 

06 jan 03: V.Ivant (utils-V05-00-00)
- Update interfaces to STD classes in order to be ready to migrade 
  to "cut per region"

12 dec 02: V.Ivant (utils-V04-01-12)