@@ -1,4 +1,4 @@
-$Id: History,v 1.77 2003-02-18 10:41:12 vnivanch Exp $
+$Id: History,v 1.78 2003-02-18 12:16:29 vnivanch Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -18,6 +18,7 @@ committal in the CVS repository !
      ----------------------------------------------------------
 
 18 feb 03: V.Ivant
+- add control on CutsCouple usage
 - utilise SubType for GenericIons
 - fix problems with lambda and range tables for STD hadrons/ions
 - fix problem of several runs with changed cuts/couples for STD
